--- a/.env
+++ b/.env
@@ -28,10 +28,10 @@ SENDGRID_API_KEY=mtwmn3ZpRZS9wQwnLGg0zQ
 sessionSecret=a65drg46d5f4gd65f4g6d5f4gd6f54g
 
 # superAdmin account
-firstname='TahalufAdmin'
-lastname= 'TahalufAdmin',
-email= 'TahalufAdmin.ext@tahaluf.ae'
-password= 'TahalufAdmin117150'
+firstname='E7GEZ'
+lastname= 'Admin'
+email= 'E7GEZAdmin@E7GEZ.com'
+password= 'E7GEZAdmin117150'
 role= 'SuperAdmin'
 phoneNumber = '07000000000'
 imagePath = 'im-user.png'
