--- a/.env
+++ b/.env
@@ -35,6 +35,7 @@ password= 'E7GEZAdmin117150'
 role= 'SuperAdmin'
 phoneNumber = '07000000000'
 imagePath = 'im-user.png'
+isActive = true
 # default Statistics values
 default=0
 
