--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "fs": "0.0.1-security",
     "generate-password": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
+    "mailslurp-client": "^15.13.4",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.1",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.10.0",
     "node": "^17.4.0",
-    "nodemon": "^2.0.15",
-    "passport": "^0.5.2",
-    "simple-node-logger": "^21.8.12"
+    "nodemailer": "^6.7.8",
+    "passport": "^0.6.0",
+    "simple-node-logger": "^21.8.12",
+    "xoauth2": "^1.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -33,6 +35,6 @@
   "author": "Mohammad Osama AlOmari",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.19"
   }
 }
