add new db connection

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 # Mongo Database
-MONGODB_URI = mongodb://127.0.0.1:27017/ihjez
+MONGODB_URI = mongodb+srv://moastaf98:ZiX6qM5oit86uU5I@honey.yttsl.mongodb.net/?retryWrites=true&w=majority
+
+#mongodb://127.0.0.1:27017/ihjez
 
 # BASIC_AUTH
 KEY =TahalufOqdrgOFGKffrSGbfNtwrhF
@@ -34,7 +36,7 @@ email= 'E7GEZAdmin@E7GEZ.com'
 password= 'E7GEZAdmin117150'
 role= 'SuperAdmin'
 phoneNumber = '07000000000'
-imagePath = 'im-user.png'
+# imagePath = 'im-user.png'
 isActive = true
 # default Statistics values
 default=0
