--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cryptr": "^6.0.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.1",
