--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,4 +7,4 @@ deploy:
     before_script:
       - gem install dpl
     script:
-      - dpl --provide=heroku --app=$APP_NAME --api-key=$HEROKU_API_KEY
+      - dpl --provider=heroku --app=$APP_NAME --api-key=$HEROKU_API_KEY
