add multiple env files

--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,6 @@
 # Mongo Database
-MONGODB_URI = mongodb+srv://moastaf98:ZiX6qM5oit86uU5I@honey.yttsl.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://e7jezapp:e7jez2022@e7jez.olzwbxz.mongodb.net/?retryWrites=true&w=majority
+#mongodb+srv://moastaf98:ZiX6qM5oit86uU5I@honey.yttsl.mongodb.net/?retryWrites=true&w=majority
 
 #mongodb://127.0.0.1:27017/ihjez
 
