--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "cryptr": "^6.0.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
@@ -25,13 +26,14 @@
     "nodemailer": "^6.7.8",
     "passport": "^0.6.0",
     "simple-node-logger": "^21.8.12",
+    "socket.io": "^4.5.4",
     "xoauth2": "^1.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "backend_start": "node index.js",
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "set node_env=dev && nodemon index.js",
+    "start": "set node_env=prod && node index.js"
   },
   "author": "Mohammad Osama AlOmari",
   "license": "ISC",
