--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "backend_start": "node index.js",
+    "backend_start": "set node_env=prod && node index.js",
     "dev": "set node_env=dev && nodemon index.js",
     "start": "set node_env=prod && node index.js"
   },
