UPDATE post Controller

--- a/.env.prod
+++ b/.env.prod
@@ -16,7 +16,7 @@ JWT_EXPIRATION = 4h
 API_PORT=3000
 HOST_URL = http://localhost:3000
 LRS_URL = http://localhost:3000/api/v1/LRS/xAPI
-
+PORT = 10000
 HTTPS=true
 
 #######################################################
