create base64ImageMiddleware, update userController, postController

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,25 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
+
+src/upload/1672009970924.JPG
+src/upload/1671921606462.JPG
+src/upload/1671921858673.JPG
+src/upload/1671989238073.JPG
+src/upload/1671989534813.JPG
+src/upload/1671989801072.JPG
+src/upload/1671989872639.JPG
+src/upload/1671989977616.JPG
+src/upload/1671990097949.JPG
+src/upload/1671992763116.JPG
+src/upload/1671992896921.JPG
+src/upload/1671992983446.JPG
+src/upload/1671993158177.JPG
+src/upload/1671994115441.JPG
+src/upload/1671994143993.JPG
+src/upload/1671995103048.JPG
+src/upload/1672007786663.JPG
+src/upload/1672007928669.JPG
+src/upload/1672008258099.JPG
+src/upload/1672008332208.JPG
+src/upload/1672008650341.JPG
